--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,10 @@
   }
 }
 
+div {
+  color: #1A4AFA;
+}
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
@@ -141,7 +145,7 @@ nav .nav-link {
 
 footer {
   background-color: white;
-  color: #6D72AE;
+  color: #1A4AFA;
   text-align: center;
   padding-top: -5px;
   padding-bottom: 5px;
@@ -3019,7 +3023,7 @@ textarea.form-control-lg {
 
 .input-group> :not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
   margin-left: -1px;
-  border-top-left-radius: 0;
+  border-top-left-radius: 0; 
   border-bottom-left-radius: 0;
 }
 
